added large images to the product page, changed the font on the product page as well.

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" type="text/css" href="website.css">
     <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&family=Didact+Gothic&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -16,7 +17,7 @@
 </nav>
 
 <div class="psidebar">
-    <img src="#" alt="illustration of a man looking to the side, but as an x-ray.">
+    <img src="LG images\skeumor.png" alt="illustration of a man looking to the side, but as an x-ray.">
     <h1>
         Von Conley
     </h1>
@@ -44,5 +45,5 @@
 </div>
 
 <footer>
-    frankensteins-monster.com
+    <p> frankensteins-monster.com </p>
 </footer>
