--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" type="text/css" href="website.css">
     <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&family=Didact+Gothic&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -24,10 +25,11 @@
         </p>
     </div>
     <div class="hbox">
-        <img src="#" alt="illustration of a man looking to the side, but as an x-ray.">
+        <img src="LG images\skeumor.png" alt="illustration of a man looking to the side, but as an x-ray.">
         <h2>
             Follow my Socials!
         </h2>
+    </div>
         <div class="socials">
             <a href="https://www.instagram.com/frankenvon/">instagram</a>
             <a href="https://toyhou.se/Frankenvon">toyhouse</a>
@@ -39,5 +41,5 @@
 
     </div>
 <footer>
-    frankensteins-monster.com
+    <p> frankensteins-monster.com </p>
 </footer>
