--- a/products.html
+++ b/products.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" type="text/css" href="website.css">
     <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&family=Didact+Gothic&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -18,23 +19,10 @@
 <table>
         <tr>
         <td>
-            <img src="#" alt="nothingyet">
+            <img src="LG images\Setsucomm.png" alt="A drawing of a Woman with multicolored hair wearing a short, ruffle-y dress with tights.">
         </td>
         <td>
-            title + size
-        </td>
-        <td>
-            $0.00
-        </td>
-        </tr>
-
-        <table>
-        <tr>
-        <td>
-            <img src="#" alt="nothingyet">
-        </td>
-        <td>
-            title + size
+            Setsuna + size
         </td>
         <td>
             $0.00
@@ -44,10 +32,23 @@
         <table>
         <tr>
         <td>
-            <img src="#" alt="nothingyet">
+            <img src="LG images\danchika.png" alt="A drawing of a cutesy, bipedal deer holding a small weapon.">
         </td>
         <td>
-            title + size
+            Danchika + size
+        </td>
+        <td>
+            $0.00
+        </td>
+        </tr>
+
+        <table>
+        <tr>
+        <td>
+            <img src="LG images\chibis.png" alt="A drawing of two individuals standing back to back. right: a young girl with brown hair and short black dress. Left: a young boy with medium-length blue hair, wearing a coat.">
+        </td>
+        <td>
+            Aimi and Yuki + size
         </td>
         <td>
             $0.00
@@ -56,23 +57,10 @@
 
                 <tr>
         <td>
-            <img src="#" alt="nothingyet">
+            <img src="LG images/aimi1.jpg" alt="A drawing with two silhouettes, a girl with a scythe and a large, featureless person overlooking the whole scene.">
         </td>
         <td>
-            title + size
-        </td>
-        <td>
-            $0.00
-        </td>
-        </tr>
-
-        <table>
-        <tr>
-        <td>
-            <img src="#" alt="nothingyet">
-        </td>
-        <td>
-            title + size
+            Surveillance + size
         </td>
         <td>
             $0.00
@@ -82,10 +70,23 @@
         <table>
         <tr>
         <td>
-            <img src="#" alt="nothingyet">
+            <img src="LG images/aimi2.png" alt="Drawing of a girl with two-headed scythe with cords sprouting from her back just off-screen.">
         </td>
         <td>
-            title + size
+            Cords + size
+        </td>
+        <td>
+            $0.00
+        </td>
+        </tr>
+
+        <table>
+        <tr>
+        <td>
+            <img src="LG images/yuki.png" alt="Drawing of blue haired boy in coat.">
+        </td>
+        <td>
+            Frozen + size
         </td>
         <td>
             $0.00
@@ -94,7 +95,10 @@
 
     </table>
 
+    <button>
+        Cart
+    </button>
 
 <footer>
-    frankensteins-monster.com
+    <p> frankensteins-monster.com </p>
 </footer>
