Added seperate .CSS files for Products and Index. Reformatted the Index page. Confirmed Nav bar shifts for smaller page sizes.

--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" type="text/css" href="website.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&family=Didact+Gothic&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
+<body>
 <img src="#" alt="glasses but one lense is a square and the other is a circle. It's green and brown.">
 <nav>
     <a href="products.html">Products</a> 
     <a href="#">Home</a>
     <a href="contact.html">Contact</a>
 </nav>
-
-    <div class="hText">
+<div class="profile">
+    <div class="htext">
         <h1>
             Meet Frankenvon!
         </h1>
@@ -29,7 +30,6 @@
         <h2>
             Follow my Socials!
         </h2>
-    </div>
         <div class="socials">
             <a href="https://www.instagram.com/frankenvon/">instagram</a>
             <a href="https://toyhou.se/Frankenvon">toyhouse</a>
@@ -38,8 +38,10 @@
             <a href="https://bsky.app/">deviantart</a>
             <a href="https://www.youtube.com/@FrankenVON">youtube</a>
         </div>
+    </div>
 
     </div>
+</div>
 <footer>
     <p> frankensteins-monster.com </p>
 </footer>
