added green logo to the top of every page without the styling.

--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&family=Didact+Gothic&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
-<img src="#" alt="glasses but one lense is a square and the other is a circle. It's green and brown.">
+    <div class="greenie">
+<img src="LG images\greenlogo.png" alt="glasses but one lense is a square and the other is a circle. It's green.">
+    </div>
 <nav>
     <a href="products.html">Products</a> 
     <a href="index.html">Home</a>
