--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<img src="#" alt="glasses but one lense is a square and the other is a circle. It's green and brown.">
+    <div class="greenie">
+<img src="LG images\greenlogo.png" alt="glasses but one lense is a square and the other is a circle. It's green.">
+    </div>
 <nav>
     <a href="products.html">Products</a> 
     <a href="#">Home</a>
@@ -22,7 +24,14 @@
             Meet Frankenvon!
         </h1>
         <p>
-        i've gotta write this still my bad
+            I have been an artist for my entire life, choosing to focus on it solely for many years. 
+            I have a long way to go progress wise, as every artist does, but the chase never stops 
+            and it satisfies me. I mainly work with digital media, Clip Studio Paint is my go-to program
+            for any kind of  illustration and concept development. I also enjoy branching into physical
+            sculpting and 3D modeling, as it helps me find inspiration in the times where it is hard for
+             me to create. <br> Currently, I’m more focused in on several solo projects that help me evolve 
+             my own storytelling abilities, but when it comes to working with others I contribute 
+             ideas/art and reformatting for Holly G.T.’s comic series, The Verse.
         </p>
     </div>
     <div class="hbox">
@@ -31,7 +40,7 @@
             Follow my Socials!
         </h2>
         <div class="socials">
-            <a href="https://www.instagram.com/frankenvon/">instagram</a>
+            <a href="https://www.instagram.com/frankenvon/"><img src="smiley.gif" alt="Instagram"></a>
             <a href="https://toyhou.se/Frankenvon">toyhouse</a>
             <a href="https://bsky.app/profile/frankenvon.bsky.social">bluesky</a>
             <a href="https://www.tumblr.com/frankenvon">tumblr</a>
