--- a/products.html
+++ b/products.html
@@ -5,11 +5,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" type="text/css" href="website.css">
+    <link rel="stylesheet" type="text/css" href="product.css">
     <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&family=Didact+Gothic&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-    
-<img src="#" alt="glasses but one lense is a square and the other is a circle. It's green and brown.">
+    <div class="greenie">
+<img src="LG images\greenlogo.png" alt="glasses but one lense is a square and the other is a circle. It's green.">
+    </div>
 <nav>
     <a href="#">Products</a> 
     <a href="index.html">Home</a>
