Added the photo icons for the social media tab + changed the h2 header to the correct font.

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
     </div>
     <div class="hbox">
         <img src="LG images\skeumor.png" alt="illustration of a man looking to the side, but as an x-ray.">
+        <div class="socials">
         <h2>
             Follow my Socials!
         </h2>
-        <div class="socials">
-            <a href="https://www.instagram.com/frankenvon/"><img src="smiley.gif" alt="Instagram"></a>
-            <a href="https://toyhou.se/Frankenvon">toyhouse</a>
-            <a href="https://bsky.app/profile/frankenvon.bsky.social">bluesky</a>
-            <a href="https://www.tumblr.com/frankenvon">tumblr</a>
-            <a href="https://bsky.app/">deviantart</a>
-            <a href="https://www.youtube.com/@FrankenVON">youtube</a>
+            <a href="https://www.instagram.com/frankenvon/"><img src="LG images/instagram.png" alt="Instagram"></a>
+            <a href="https://toyhou.se/Frankenvon"><img src="LG images/download (1).png" alt="Toyhouse"></a>
+            <a href="https://bsky.app/profile/frankenvon.bsky.social"><img src="LG images/Bluesky_Logo (1).png" alt="Bluesky"></a>
+            <a href="https://www.tumblr.com/frankenvon"><img src="LG images/tumblr.png" alt="Tumblr"></a>
+            <a href="https://bsky.app/"><img src="LG images/deviantart.png" alt="deviantart"></a>
+            <a href="https://www.youtube.com/@FrankenVON"><img src="LG images/youtube.png" alt="Youtube"></a>
         </div>
     </div>
 
