--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
     <a href="#">Contact</a>
 </nav>
 
+<div class="conform">
 <div class="psidebar">
     <img src="LG images\skeumor.png" alt="illustration of a man looking to the side, but as an x-ray.">
     <h1>
@@ -43,6 +44,7 @@
 
         <input type="submit" value="Submit">
     </form>
+</div>
 </div>
 
 <footer>
