changed the table into a bunch of divs so that they can format correctly.

--- a/products.html
+++ b/products.html
@@ -18,88 +18,46 @@
     <a href="contact.html">Contact</a>
 </nav>
 
-<table>
-        <tr>
-        <td>
-            <img src="LG images\Setsucomm.png" alt="A drawing of a Woman with multicolored hair wearing a short, ruffle-y dress with tights.">
-        </td>
-        <td>
-            Setsuna + size
-        </td>
-        <td>
-            $0.00
-        </td>
-        </tr>
+<div class="superdiv">
+    <div>
+    <div class="print1">
+        <img src="LG images\Setsucomm.png" alt="A drawing of a Woman with multicolored hair wearing a short, ruffle-y dress with tights.">
+        <p> Setsuna - Size </p>
+        <p> $0.00 </p>
+    </div>
 
-        <table>
-        <tr>
-        <td>
-            <img src="LG images\danchika.png" alt="A drawing of a cutesy, bipedal deer holding a small weapon.">
-        </td>
-        <td>
-            Danchika + size
-        </td>
-        <td>
-            $0.00
-        </td>
-        </tr>
+        <div class="print1">
+        <img src="LG images\danchika.png" alt="A drawing of a cutesy, bipedal deer holding a small weapon.">
+        <p> Danchika - Size </p>
+        <p> $0.00 </p>
+    </div>
 
-        <table>
-        <tr>
-        <td>
-            <img src="LG images\chibis.png" alt="A drawing of two individuals standing back to back. right: a young girl with brown hair and short black dress. Left: a young boy with medium-length blue hair, wearing a coat.">
-        </td>
-        <td>
-            Aimi and Yuki + size
-        </td>
-        <td>
-            $0.00
-        </td>
-        </tr>
+        <div class="print2">
+        <img src="LG images\chibis.png" alt="A drawing of two individuals standing back to back. right: a young girl with brown hair and short black dress. Left: a young boy with medium-length blue hair, wearing a coat.">
+        <p> Aimi and Yuki - Size </p>
+        <p> $0.00 </p>
+    </div>
+    </div>
+    <div>
+        <div class="print3">
+        <img src="LG images/aimi1.jpg" alt="A drawing with two silhouettes, a girl with a scythe and a large, featureless person overlooking the whole scene.">
+        <p> Aimi Alone - Size </p>
+        <p> $0.00 </p>
+    </div>
 
-                <tr>
-        <td>
-            <img src="LG images/aimi1.jpg" alt="A drawing with two silhouettes, a girl with a scythe and a large, featureless person overlooking the whole scene.">
-        </td>
-        <td>
-            Surveillance + size
-        </td>
-        <td>
-            $0.00
-        </td>
-        </tr>
+        <div class="print4">
+        <img src="LG images/aimi2.png" alt="Drawing of a girl with two-headed scythe with cords sprouting from her back just off-screen.">
+        <p> Cords - Size </p>
+        <p> $0.00 </p>
+    </div>
 
-        <table>
-        <tr>
-        <td>
-            <img src="LG images/aimi2.png" alt="Drawing of a girl with two-headed scythe with cords sprouting from her back just off-screen.">
-        </td>
-        <td>
-            Cords + size
-        </td>
-        <td>
-            $0.00
-        </td>
-        </tr>
-
-        <table>
-        <tr>
-        <td>
-            <img src="LG images/yuki.png" alt="Drawing of blue haired boy in coat.">
-        </td>
-        <td>
-            Frozen + size
-        </td>
-        <td>
-            $0.00
-        </td>
-        </tr>
-
-    </table>
-
-    <button>
-        Cart
-    </button>
+        <div class="print5">
+        <img src="LG images/yuki.png" alt="Drawing of blue haired boy in coat.">
+        <p> Frozen - Size </p>
+        <p> $0.00 </p>
+    </div>
+    </div>
+</div>
 
 <footer>
     <p> frankensteins-monster.com </p>
